Fixing missing context
